--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -20,7 +20,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "停车电话",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
